--- a/src/open_inwoner/scss/components/CardContainer/CardContainer.scss
+++ b/src/open_inwoner/scss/components/CardContainer/CardContainer.scss
@@ -16,6 +16,11 @@
         --card-columns: #{$i};
       }
     }
+
+    &--user-home,
+    &--columns-4 {
+      grid-template-columns: repeat(auto-fit, 228px);
+    }
   }
 
   &--small {
